<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.baidu_map.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title"
                android:textColor="@color/colorRed"
                android:textSize="20sp" />

            <Button
                android:id="@+id/common_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/common_map" />

            <Button
                android:id="@+id/satellite_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/satellite_map" />

            <Button
                android:id="@+id/empty_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_map" />

            <Button
                android:id="@+id/traffic_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/traffic_map" />

            <Button
                android:id="@+id/hot_map_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hot_map" />

            <Button
                android:id="@+id/central_map_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/central_map" />

            <Button
                android:id="@+id/marker_map_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marker_map" />

            <Button
                android:id="@+id/text_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_option" />

            <Button
                android:id="@+id/city_search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_search" />

            <Button
                android:id="@+id/range_search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/range_search" />

            <Button
                android:id="@+id/nearby_search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nearby_search" />

            <Button
                android:id="@+id/busLine_search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/busLine_search"/>

            <Button
                android:id="@+id/route_plan_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/route_plan"/>

            <Button
                android:id="@+id/location_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"/>




        </LinearLayout>

    </ScrollView>


</LinearLayout>
